# mailsift

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: rust.yml
src/: artifacts.rs  cli.rs  config.rs  dkim.rs  extractor.rs  gss.rs  imap_scan.rs  lib.rs  main.rs  milter.rs  pipeline.rs  reservation.rs  seen.rs  stats.rs  unforward.rs
src/pipeline/: mod.rs  router.rs
src/targets/: bills.rs  caldav.rs  firefly.rs  http_auth.rs  http_client.rs  json_target.rs  karrio.rs  local_events.rs  mail_forward.rs  mod.rs  parcels.rs  receipts.rs  seventeentrack.rs  sink.rs  subscriptions.rs  tickets.rs  trackers.rs  webdav.rs
tests/: milter.rs  parcels_pipeline.rs  pipeline_dkim.rs  pipeline_dkim_suffix_match.rs  pipeline_reservation.rs  replay.rs
tests/common/: mod.rs
tests/fixtures/eml/: dkim-required-signed.eml  dkim-required-spoofed.eml  dkim-suffix-lookalike.eml  dkim-suffix-signed.eml  ics-attachment.eml  lodging-confirmation.eml  parcel-delivered.eml  parcel-on-its-way.eml  parcel-out-for-delivery.eml  parcel-with-window.eml
tests/fixtures/extractors/: dkim-required.py  dkim-required.yaml  dkim-suffix-required.py  dkim-suffix-required.yaml  ics-pass.py  ics-pass.yaml  lodging.py  lodging.yaml  parcel-status.py  parcel-status.yaml  parcel-with-window.py  parcel-with-window.yaml
