[package]
name = "mailsift"
version = "0.0.1"
edition = "2024"
description = "Extracts structured artifacts (events, tickets, parcels, receipts, bills) from incoming personal email."
license = "GPL-3.0-or-later"

[features]
# Reserved for SASL `AUTHENTICATE GSSAPI` (IMAP) and HTTP `Negotiate`
# (CalDAV/WebDAV). The auth code already cfg-gates on this flag; the
# library and feature lookups land in follow-up commits.
gssapi = []
# SMTP submission for the receipts forwarder. Without it the sendmail
# pipe transport still works. Pulls in `lettre`'s MIME / encoding /
# TLS dep tree.
smtp = ["lettre/smtp-transport", "lettre/tokio1-rustls-tls"]

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
# Cross-platform SIGINT/SIGTERM handler for the long-running daemons.
ctrlc = "3"
icalendar = "0.16"
imap = { git = "https://github.com/jelmer/rust-imap", branch = "gssapi", default-features = false, features = ["rustls-tls"] }
imap-proto = "0.16"
indicatif = "0.18"
indymilter = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "sendmail-transport"] }
libc = "0.2"
mailparse = "0.16.1"
percent-encoding = "2"
quick-xml = "0.36"
regex = "1"
rayon = "1"
redb = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2"
indymilter-test = "0.2.0"
